# DailyNews

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  PLANS.md  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  harness-daily.yml
apps/api/: dependencies.py  main.py  run.py
apps/jobs_digest/: main.py
apps/jobs_ingest/: main.py
apps/worker/: main.py
docs/: 00-overview.md  01-architecture.md  02-railway-deployment.md  03-miniflux.md  04-telegram.md  05-data-model.md  06-pipeline.md  07-prompts.md  08-ranking-rubric.md  09-verification-agent.md  10-chat-and-commands.md  11-security.md  12-observability-runbook.md  13-codex-backlog.md  14-open-questions.md  15-implementation-mvp.md  decisions.md
docs/adr/: 0001-add-internal-debug-overview.md  0002-limit-realtime-push-and-sync-miniflux-read-state.md  0003-quarantine-empty-content-entries.md  0004-add-verification-audit-state.md  0005-reduce-fetch-churn-and-add-llm-usage-telemetry.md  0006-shift-ingest-batch-preparation-into-activity.md  0007-stop-counting-expected-process-exits-as-workflow-failures.md  0008-adopt-balanced-ingest-defaults-for-production.md  ADR_TEMPLATE.md
libs/core/: metrics.py  rate_limit.py  settings.py
libs/core/db/: enums.py  (+3 more)
libs/integrations/: deepseek_client.py  embeddings.py  miniflux_client.py  tavily_client.py  telegram_client.py
libs/workflows/: activities.py  contracts.py  workflows.py
migrations/: README  env.py
scripts/: check_repo_contracts.sh  forbid_uv_pip.sh  generate_harness_snapshot.py
(+24 files in other folders)
